private-hosting/openwebui/ingress-openwebui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
spec:
  ingressClassName: traefik
  rules:
    - host: ai.lab.theoboursy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port: { name: http }
